Adiciona curso: Formação Cybersecurity Specialist

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/BD493815/share">Formação Cybersecurity Specialist</a></li>
                 <li><strong>IBM</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/d6c9f9f7-2743-4563-bde6-c2bd71b2090f">Introduction to DevOps</a></li>
                 <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
                 <li><strong>SENAI</strong> &mdash; <a class="texto-pequeno" href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Competência Transversal: TIC</a></li>
