Adiciona projetos: tdb, pyransom e semtec.js

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
         <h2>Projetos</h2>
         <ul class="lista">
-            <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
+            <li><strong><a href="https://github.com/jultty/tdb">tdb</a></strong> &mdash; Implementação TypeScript das regras do boliche usando Desenvolvimento Dirigido a Testes (TDD)</li>
+            <li><strong><a href="https://github.com/jultty/pyransom">pyransom</a></strong> &mdash; Uma aplicação capaz de viajar recursivamente por diretórios e encriptá-los usando um algoritmo AES, com padding nos dados e testes automatizados</li>
+            <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> e <strong><a href="https://github.com/jultty/semtec-js">semtec-js</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
             <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
             <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
             <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google</li>
