--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="col">
         <h1>&gt; Juno Takano</h1>
-        <p class="tagline">Tradutora, desenvolvedora e estudante de Análise de Sistemas</p>
+        <p class="tagline">Desenvolvedora, tradutora e estudante de Análise de Sistemas</p>
 
         <h2>Apresentação</h2>
         <div>
