--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul class="lista">
             <li class="item-espacado"><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia
                 <ul>
-                    <li><strong>Tradutora e Desenvolvedora</strong></li>
+                    <li><strong>Desenvolvedora e Tradutora</strong></li>
                     <li>Executo e implanto soluções para automação em processos de tradução, transcrição e legendagem</li>
                 </ul>
             </li>
@@ -109,10 +109,10 @@
 
         <h2>Palestras e eventos</h2>
         <ul class="lista">
-            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações
-                modernas, resilientes e escaláveis</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Semana da Informática</span></li>
-                <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
+                <li class="item-espacado"><a href="assets/pdf/certs/fib-2023.pdf">13&ordm; Fórum da Internet no Brasil</a><br><strong class="texto-pequeno">CGI.br e NIC.br</strong class="texto-pequeno"></li>
                 <li class="item-espacado"><a href="https://www.even3.com.br/documentos/imprimir?i=1187860.88475600.6.8.5797307719630037&cc=C64EE9A4-0951-4A78-B878-A39E5DE7EFF9">Ransomware e Segurança Defensiva</a><br><strong class="texto-pequeno">Tempest</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Palestras Técnicas do Action Talents</span></li>
+                <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
+            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações modernas, resilientes e escaláveis</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Semana da Informática</span></li>
                 </ul>
 
         <h2>Idiomas</h2>
