Add course: CCNA1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h2>Apresentação</h2>
         <div>
-            <p>Atualmente em Jacareí, no Vale do  Paraíba, atuo na implantação, suporte e automação de processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final. </p>
+            <p>Moro na cidade de Jacareí, onde atuo na implantação, suporte e automação de processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final. Aqui é também onde frequento o curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
             <details>
             <summary>Ler mais</summary>
             <p>Venho da área de idiomas, onde comecei lecionando e traduzindo inglês. A experiência com ferramentas de tradução assistida foi onde consegui aplicar meus conhecimentos técnicos e transformá-los em soluções pela primeira vez.</p>
@@ -83,10 +83,16 @@
         </ul>
 
 
+        <h2>Idiomas</h2>
+        <ul class="lista">
+            <li><strong>Inglês:</strong> Fluente &mdash; Certificação TOEIC Gold</li>
+        </ul>
+
         <h2>Cursos</h2>
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ccna1.pdf">CCNA1: Introdução às Redes</a></li>
                 <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/BD493815/share">Formação Cybersecurity Specialist</a></li>
                 <li><strong>IBM</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/d6c9f9f7-2743-4563-bde6-c2bd71b2090f">Introduction to DevOps</a></li>
                 <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
@@ -114,11 +120,6 @@
                 <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
             <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microsserviços: como são construídas aplicações modernas, resilientes e escaláveis</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Semana da Informática</span></li>
                 </ul>
-
-        <h2>Idiomas</h2>
-        <ul class="lista">
-            <li><strong>Inglês:</strong> Fluente &mdash; Certificação TOEIC Gold</li>
-        </ul>
 
                 <h2>Links</h2>
                 <ul class="lista">
