--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
         <h2>Palestras e eventos</h2>
         <ul class="lista">
+                <li class="item-espacado"><a href="https://www.even3.com.br/documentos/imprimir?i=1141276.88475600.6.8.5152937719630037&cc=F2B98587-13E4-49E8-B48E-D81221833A33">SOC: Conhecendo sua Estruturação e Operação</a><br><strong class="texto-pequeno">Tempest</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Palestras Técnicas do Action Talents</span></li>
                 <li class="item-espacado"><a href="assets/pdf/certs/fib-2023.pdf">13&ordm; Fórum da Internet no Brasil</a><br><strong class="texto-pequeno">CGI.br e NIC.br</strong class="texto-pequeno"></li>
                 <li class="item-espacado"><a href="https://www.even3.com.br/documentos/imprimir?i=1187860.88475600.6.8.5797307719630037&cc=C64EE9A4-0951-4A78-B878-A39E5DE7EFF9">Ransomware e Segurança Defensiva</a><br><strong class="texto-pequeno">Tempest</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Palestras Técnicas do Action Talents</span></li>
                 <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Bibliotecas Nativas do Python na prática</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Semana Nacional de Ciência e Tecnologia</span></li>
