--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/farl.pdf">Fundamentos em Administração de Redes Linux</a></li>
                 <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ecss.pdf">Engenharia e Construção de Sistemas de Software</a></li>
                 <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ccna1.pdf">CCNA1: Introdução às Redes</a></li>
                 <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/BD493815/share">Formação Cybersecurity Specialist</a></li>
@@ -127,6 +128,7 @@
                 <ul class="lista">
                     <li><a href="https://github.com/jultty">GitHub</a></li>
                     <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
+                    <li><a href="https://cal.com/jul77y">Marcar uma reunião</a></li>
                     <li><a href="mailto:juno@newen.me">Email</a></li>
             <li><a href="assets/pdf/junoTakano_ptBR.pdf">Baixar PDF</a></li>
 
