Add course: NetSec; add Credly link

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/netsec.pdf">Segurança de Redes (Network Security)</a></li>
                 <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/farl.pdf">Fundamentos em Administração de Redes Linux</a></li>
                 <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ecss.pdf">Engenharia e Construção de Sistemas de Software</a></li>
                 <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ccna1.pdf">CCNA1: Introdução às Redes</a></li>
@@ -128,6 +129,7 @@
                 <ul class="lista">
                     <li><a href="https://github.com/jultty">GitHub</a></li>
                     <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
+                    <li><a href="https://www.credly.com/users/jultty">Credly</a></li>
                     <li><a href="https://cal.com/jul77y">Marcar uma reunião</a></li>
                     <li><a href="mailto:juno@newen.me">Email</a></li>
             <li><a href="assets/pdf/junoTakano_ptBR.pdf">Baixar PDF</a></li>
