Add Course: Nexa AWS bootcamp

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         <ul class="lista">
             <li>2023</li>
             <ul>
+                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/304E6694/share">Bootcamp Nexa Descubra a Nuvem AWS</a></li>
                 <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/netsec.pdf">Segurança de Redes (Network Security)</a></li>
                 <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/farl.pdf">Fundamentos em Administração de Redes Linux</a></li>
                 <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ecss.pdf">Engenharia e Construção de Sistemas de Software</a></li>
