--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <h2>Apresentação</h2>
       <div>
-        <p>Moro na cidade de Jacareí, onde atuo na implantação, suporte e automação de processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final. Aqui é também onde frequento o curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
+        <p>Atuo no desenvolvimento e aplicação de soluções para processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final e sua distribuição. Moro na cidade de Jacareí, onde frequento o terceiro semestre do curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
         <details>
           <summary>Ler mais</summary>
           <p>Venho da área de idiomas, onde comecei lecionando e traduzindo inglês. A experiência com ferramentas de tradução assistida foi onde consegui aplicar meus conhecimentos técnicos e transformá-los em soluções pela primeira vez.</p>
@@ -52,20 +52,26 @@
             <li>Planejamento e aplicação de aulas de inglês, recursos educacionais e atividades complementares</li>
           </ul>
         </li>
-        <li class="item-espacado"><strong>2012 &mdash; 2012</strong> Nossa Saúde Planos de Saúde
-          <ul>
-            <li><strong>Digitadora</strong></li>
-            <li>Inserção e validação de grandes volumes de dados em sistemas especializados</li>
-          </ul>
-        </li>
       </ul>
 
       <h2>Formação</h2>
       <ul class="lista">
         <li>Tecnologia em Análise e Desenvolvimento de Sistemas
           <ul class="lista">
-            <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">Instituto Federal de São Paulo - Campus Jacareí</a></li>
+            <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">
+              Instituto Federal de São Paulo - Campus Jacareí</a></li>
             <li>Em andamento, 2022 &rightarrow; 2024</li>
+          </ul>
+        </li>
+      </ul>
+
+      <h2>Certificações</h2>
+      <ul class="lista">
+        <li><a href="https://www.credly.com/badges/2ee5733b-0d4b-4809-837b-d7bcde7763df">
+          AWS Certified Cloud Practitioner
+        </a>
+          <ul class="lista">
+            <li><strong>Emitida em:</strong> setembro de 2023</li>
           </ul>
         </li>
       </ul>
