--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <li><a href="https://github.com/jultty">GitHub</a></li>
         <li><a href="https://linkedin.com/in/jutty">LinkedIn</a></li>
         <li><a href="https://www.credly.com/users/jultty">Credly</a></li>
-        <li><a href="mailto:juno@newen.me">Email</a></li>
+        <li><a href="mailto:juno@jutty.dev">Email</a></li>
         <li><a href="assets/pdf/junoTakano_ptBR.pdf">Baixar PDF</a></li>
 
       </ul>
