Update en-US version

--- a/index_en-US.html
+++ b/index_en-US.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
-<head>
-<meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -16,113 +16,144 @@
     <script type="text/javascript" src="assets/js/menu.js" defer></script>
     <script type="text/javascript" src="assets/js/lang.js" defer=""></script>
     <title>Juno Takano</title>
-</head>
-<body>
+  </head>
+  <body>
 
-    <div id="lang-notification"><p>Prefere ver essa página em Português?</p> <a href="index.html"><button id="lang-switch">Mudar idioma</button></a><button id="lang-dismiss">Fechar</button></div>
+    <div id="lang-notification"><p>Esta página está disponível em português.</p> <a href="index.html"><button id="lang-switch">Trocar idioma</button></a><button id="lang-dismiss">Fechar</button></div>
 
     <main class="col">
-        <h1>&gt; Juno Takano</h1>
-        <p class="tagline">Systems Analysis and Development student</p>
+      <h1>&gt; Juno Takano</h1>
+      <p class="tagline">Developer, translator, Systems Analysis student</p>
 
-        <h2>Areas of interest</h2>
-        <ul class="lista">
-            <li>Back-end development</li>
-            <li>DevOps / DevSecOps (Platform Engineering)</li>
-            <li>Cybersecurity and Network Infrastructure</li>
+      <h2>Introduction</h2>
+      <div>
+        <p>I am currently working with the development and deployment of solutions for translation, transcription and subtitling processes, from digitalization to final review and distribution. I live in the city of Jacareí, where I am attending the third semester of the São Paulo Federal Institute's Systems Analysis course.</p>
+        <details>
+          <summary>Read more</summary>
+          <p>I come from the language business, where I started teaching English as a Second Language classes. Later I transitioned to a translator position, where I had my first experiences with assisted translation tools. This was the context where I first started applying my technical knowledge and turning it into actual solutions.
+          <p>In 2019 I co-founded NEWEN, a small freelancing agency that works with several demands related to multilanguage resources and textual services.</p>
+          <p>Keeping our stack up to date, acquiring knowledge that adds value, and providing support so this value can multiply are some of my main responsibilities.</p>
+          <p>Besides this, I share my data-oriented perspective and am always gladly learning about the state of the art among the text-to-speech and machine translation APIs available in the market.</p>
+          <p>Along these 4 years we have worked across different levels, from small individual projects, big and small brands and even partnerships with other translation agencies. If your project also needs internationalization, it would be a pleasure to get to know it too.</p>
+        </details>
+      </div>
+
+      <h2>Experience</h2>
+      <ul class="lista">
+        <li class="item-espacado"><strong>2019 &mdash; present</strong> NEWEN Linguagens & Tecnologia
+          <ul>
+            <li><strong>Developer and Translator</strong></li>
+            <li>Developing, supporting and assessing the quality of solutions in translation, transcription and subtitling</li>
+          </ul>
+        </li>
+        <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
+          <ul>
+            <li><strong>English Teacher</strong></li>
+            <li>Planning and delivery of English classes, educational resources and extra-curricular activities.</li>
+          </ul>
+        </li>
+      </ul>
+
+      <h2>Education</h2>
+      <ul class="lista">
+        <li>Tecnology Degree in Systems Analysis and Development
+          <ul class="lista">
+            <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">
+              Federal Institute of São Paulo - Jacareí campus</a></li>
+            <li>In progress, 2022 &rightarrow; 2025</li>
+          </ul>
+        </li>
+      </ul>
+
+      <h2>Certifications</h2>
+      <ul class="lista">
+        <li><a href="https://www.credly.com/badges/2ee5733b-0d4b-4809-837b-d7bcde7763df">
+          AWS Certified Cloud Practitioner
+        </a>
+          <ul class="lista">
+            <li><strong>Issued on:</strong> September 2023</li>
+          </ul>
+        </li>
+      </ul>
+
+      <h2>Projects</h2>
+      <ul class="lista">
+        <li><strong><a href="https://github.com/jultty/tdb">tdb</a></strong> &mdash; TypeScript implementation of the bowling rules using Test-Driven Development (TDD)</li>
+        <li><strong><a href="https://github.com/jultty/pyransom">pyransom</a></strong> &mdash; An application capable of recursively traveling through directories while encrypting them with an AES-grade algorithm, with data padding and automated tests</li>
+        <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> e <strong><a href="https://github.com/jultty/semtec-js">semtec-js</a></strong> &mdash; REST API and research project on the semantic relationships between technical terms</li>
+        <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consumes the data provided by semtec-api and matches it with the content of web pages. Written using the WebExtensions API</li>
+        <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Data visualization portfolio</li>
+        <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Clean data for the portuguese version of the Google Data Analytics Professional Certificate</li>
+        <br/>
+        <li><em>Visit my <a href="https://github.com/jultty?tab=repositories">GitHub</a> profile for more</em></li>
+      </ul>
+
+
+      <h2>Languages</h2>
+      <ul class="lista">
+        <li><strong>English:</strong> Fluent &mdash; TOEIC Gold Certification</li>
+      </ul>
+
+      <h2>Courses</h2>
+      <ul class="lista">
+        <li>2023</li>
+        <ul>
+          <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/304E6694/share">Nexa Bootcamp Discover the AWS Cloud</a></li>
+          <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/netsec.pdf">Network Security</a></li>
+          <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/farl.pdf">Linux Networks Administration Fundamentals</a></li>
+          <li><strong>IFSP</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ecss.pdf">Software Systems Engineering and Construction</a></li>
+          <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="assets/pdf/certs/ccna1.pdf">CCNA1: Introduction to Networks</a></li>
+          <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/BD493815/share">Cybersecurity Specialist Program</a></li>
+          <li><strong>IBM</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/d6c9f9f7-2743-4563-bde6-c2bd71b2090f">Introduction to DevOps</a></li>
+          <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
+          <li><strong>SENAI</strong> &mdash; <a class="texto-pequeno" href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Transversal Competence: ICT</a></li>
         </ul>
-
-        <h2>Education</h2>
-        <h3>Graduation</h3>
-        <ul class="lista">
-            <li>Technology in Systems Analysis and Development<ul class="lista">
-                    <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">Federal Institute of São Paulo - Jacareí Campus</a></li>
-                    <li>In progress, 2022 &rightarrow; 2024</li>
-                </ul> </li>
+        <li>2022</li>
+        <ul>
+          <li>
+            <strong>Google</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a> 
+          </li>
+          <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
+          <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Avanade Decola Tech Bootcamp 3rd Edition</a></li>
         </ul>
-
+        <li>2021</li>
+        <ul>
+          <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/D3331470/share">Amdocs JAVA Developer Bootcamp</a></li>
+          <li><strong>Alura</strong> &mdash; <a class="texto-pequeno" href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Beginner Programming Program</a></li>
         </ul>
+      </ul>
 
-        <h3>Courses</h3>
-        <ul class="lista">
-            <li>2023</li>
-            <ul>
-                <li><strong>IBM</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/d6c9f9f7-2743-4563-bde6-c2bd71b2090f">Introduction to DevOps</a></li>
-                <li><strong>Cisco</strong> &mdash; <a class="texto-pequeno" href="https://www.credly.com/badges/56d2ee4a-305e-4ad6-ac58-6168171964cc">Cybersecurity Essentials</a></li>
-                <li><strong>SENAI</strong> &mdash; <a class="texto-pequeno" href="https://www.sp.senai.br/consulta-certificado?qrcode=00019586/7276979">Transversal Competency: ICT</a></li>
-            </ul>
-            <li>2022</li>
-            <ul>
-                <li>
-                    <strong>Coursera</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a>
-                    <ul class="lista">
-                        <li><a class="texto-menor" href="https://www.credly.com/badges/5da029c6-429a-496d-a5d9-f47baf4a4430">Validate on Credly</a> &bullet; <a class="texto-menor" href="https://mdst-graphs.netlify.app/mdst_graphs.html">See case study</a></li>
-                    </ul>
-                </li>
-                <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
-                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Avanade Decola Tech 3rd Edition Bootcamp</a></li>
-            </ul>
-            <li>2021</li>
-            <ul>
-                <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/D3331470/share">Amdocs JAVA Developer Bootcamp</a></li>
-                <li><strong>Alura</strong> &mdash; <a class="texto-pequeno" href="https://cursos.alura.com.br/user/juffff/fullCertificate/182f3f848779757ab880eb235a624162">Beginner Training in Programming</a></li>
-            </ul>
-        </ul>
+      <h2>Lectures and events</h2>
+      <ul class="lista">
+        <li class="item-espacado"><a href="assets/pdf/certs/14-seminario-privacidade.pdf">14th Personal Data Protection and Privacy Seminar</a><br><strong class="texto-pequeno">NIC.br</strong class="texto-pequeno"></li>
+        <li class="item-espacado"><a href="https://www.even3.com.br/documentos/imprimir?i=1141276.88475600.6.8.5152937719630037&cc=F2B98587-13E4-49E8-B48E-D81221833A33">SOC: Getting to know its structure and operation</a><br><strong class="texto-pequeno">Tempest</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Action Talents Technical Lectures</span></li>
+        <li class="item-espacado"><a href="assets/pdf/certs/fib-2023.pdf">13rd Internet Forum of Brazil</a><br><strong class="texto-pequeno">CGI.br and NIC.br</strong class="texto-pequeno"></li>
+        <li class="item-espacado"><a href="https://www.even3.com.br/documentos/imprimir?i=1187860.88475600.6.8.5797307719630037&cc=C64EE9A4-0951-4A78-B878-A39E5DE7EFF9">Ransomware and Defensive Security</a><br><strong class="texto-pequeno">Tempest</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">Action Talents Technical Lectures</span></li>
+        <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Native Python Libraries in practice</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno"> &mdash; <span class="texto-pequeno">National Science and Technology Week</span></li>
+        <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microservices: how modern, resilient and scalable applications are built</a><br><strong class="texto-pequeno">IFSP Birigui</strong> &mdash; <span class="texto-pequeno">Computing Week</span></li>
+      </ul>
 
-        <h2>Professional experience</h2>
-        <ul class="lista">
-            <li class="item-espacado"><strong>2019 — present</strong> NEWEN Linguagens &amp; Tecnologia <ul>
-                    <li><strong>Technical translator:</strong> Translation, transcription and subtitling</li>
-                </ul> </li>
-            <li class="item-espacado"><strong>2014 — 2017</strong> Cultural Norte Americano <ul>
-                    <li><strong>English teacher:</strong> Preparation and delivery of lessons, exams and other pedagogical activities</li>
-                </ul> </li>
-            <li class="item-espacado"><strong>2012 — 2012</strong> Nossa Saúde Health Plans <ul>
-                    <li><strong>Typist:</strong> Data entry and validation</li>
-                </ul> </li>
-        </ul>
+      <h2>Links</h2>
+      <ul class="lista">
+        <li><a href="https://github.com/jultty">GitHub</a></li>
+        <li><a href="https://linkedin.com/in/jutty">LinkedIn</a></li>
+        <li><a href="https://www.credly.com/users/jultty">Credly</a></li>
+        <li><a href="mailto:juno@jutty.dev">Email</a></li>
+        <li><a href="assets/pdf/junoTakano_enUS.pdf">Download PDF version</a></li>
 
-        <h2>Languages</h2>
-        <ul class="lista">
-            <li><strong>English:</strong> Fluent - TOEIC Gold certification</li>
-        </ul>
-
-        <h3>Lectures and short courses</h3>
-        <ul class="lista">
-            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/1517/?hash=df7a7041369c409c">Microservices: how modern, resilient and scalable applications are built</a><br><strong class="texto-pequeno">IFSP Birigui</strong> — <span class="texto-pequeno">Computer Week</span></li>
-            <li class="item-espacado"><a href="https://suap.ifsp.edu.br/eventos/baixar_certificado/2419/?hash=1aff2c4d9e837b6c">Native Python libraries in practice</a><br><strong class="texto-pequeno">IFSP Birigui</strong class="texto-pequeno" class="texto-pequeno"> — <span class="texto-pequeno">National Science and Technology Week</span></li>
-        </ul>
-
-        <h2>Projects</h2>
-        <ul class="lista">
-            <li><strong><a href="https://semtec.netlify.app/">semtec</a></strong> - API and research project on semantic relations between technical terms</li>
-            <li><strong><a href="https://semtec.netlify.app/">semtec-ext</a></strong> - Consumes semtec API Terms and searches for matches on a web page</li>
-            <li><strong><a href="https://jultty.github.io/dataviz">dataviz</a></strong> - Data visualization projects</li>
-            <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Clean data for the Google Data Analytics Professional Certificate's Portuguese version.</li>
-        </ul>
-
-        <h2>Links</h2>
-        <ul class="lista">
-            <li><a href="https://github.com/jultty">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/jultty">LinkedIn</a></li>
-            <li><a href="https://profile.codersrank.io/user/jultty/">CodersRank</a></li>
-            <li><a href="mailto:juno@newen.me">Mail</a></li>
-            <li><a href="http://lattes.cnpq.br/0992931976600432">Lattes</a></li>
-            <li><a href="assets/pdf/junoTakano_enUS.pdf">Download as PDF</a></li>
-
-        </ul>
+      </ul>
 
     </main>
 
     <button id="nav-botao" class="nav-botao-fundo"><span class="fa fa-bars" aria-hidden="true" alt="Menu"></span></button>
 
     <nav id="nav-menu">
-        <ul>
-            <li><a href="https://github.com/jultty/jultty.github.io">Repository</a></li>
-            <li>jultty &bullet; 2023</li>
-            <li><a href="index.html">Português</a></li>
-        </ul>
+      <ul>
+        <li><a href="https://github.com/jultty/jultty.github.io">Source code</a></li>
+        <li>jultty &bullet; 2023</li>
+        <li><a href="index.html">Portuguese</a></li>
+      </ul>
     </nav>
 
-</body>
+  </body>
 </html>
