Update current university semester

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <h2>Apresentação</h2>
       <div>
-        <p>Atuo no desenvolvimento e aplicação de soluções para processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final e sua distribuição. Moro na cidade de Jacareí, onde frequento o terceiro semestre do curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
+        <p>Atuo no desenvolvimento e aplicação de soluções para processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final e sua distribuição. Moro na cidade de Jacareí, onde frequento o sexto semestre do curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
         <details>
           <summary>Ler mais</summary>
           <p>Venho da área de idiomas, onde comecei lecionando e traduzindo inglês. A experiência com ferramentas de tradução assistida foi onde consegui aplicar meus conhecimentos técnicos e transformá-los em soluções pela primeira vez.</p>
@@ -111,7 +111,7 @@
         <li>2022</li>
         <ul>
           <li>
-            <strong>Google</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Certificado Profissional de Análise de Dados</a> 
+            <strong>Google</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Certificado Profissional de Análise de Dados</a>
           </li>
           <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
           <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Bootcamp Avanade Decola Tech 3&ordf; Edição</a></li>
