--- a/index_en-US.html
+++ b/index_en-US.html
@@ -27,7 +27,7 @@
 
       <h2>Introduction</h2>
       <div>
-        <p>I am currently working with the development and deployment of solutions for translation, transcription and subtitling processes, from digitalization to final review and distribution. I live in the city of Jacareí, where I am attending the third semester of the São Paulo Federal Institute's Systems Analysis course.</p>
+        <p>I am currently working with the development and deployment of solutions for translation, transcription and subtitling processes, from digitalization to final review and distribution. I live in the city of Jacareí, where I am attending the sixth semester of the São Paulo Federal Institute's Systems Analysis course.</p>
         <details>
           <summary>Read more</summary>
           <p>I come from the language business, where I started teaching English as a Second Language classes. Later I transitioned to a translator position, where I had my first experiences with assisted translation tools. This was the context where I first started applying my technical knowledge and turning it into actual solutions.
@@ -111,7 +111,7 @@
         <li>2022</li>
         <ul>
           <li>
-            <strong>Google</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a> 
+            <strong>Google</strong> &mdash; <a class="texto-pequeno" href="https://coursera.org/verify/professional-cert/YP2CK65FDE5D">Google Data Analytics Professional Certificate</a>
           </li>
           <li><strong>Codecademy</strong> &mdash; <a class="texto-pequeno" href="https://www.codecademy.com/users/jultty/achievements">Fundamentals of Cybersecurity</a></li>
           <li><strong>DIO</strong> &mdash; <a class="texto-pequeno" href="https://www.dio.me/certificate/79EA21CB/share">Avanade Decola Tech Bootcamp 3rd Edition</a></li>
