--- a/index.html
+++ b/index.html
@@ -23,27 +23,33 @@
 
     <main class="col">
       <h1>&gt; Juno Takano</h1>
-      <p class="tagline">Desenvolvedora, tradutora e estudante de Análise de Sistemas</p>
+      <p class="tagline">Desenvolvedora, tradutora, estudante de Análise de Sistemas</p>
 
       <h2>Apresentação</h2>
       <div>
-        <p>Atuo no desenvolvimento e aplicação de soluções para processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final e sua distribuição. Moro na cidade de Jacareí, onde frequento o sexto semestre do curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
+        <p>Atuo no desenvolvimento e aplicação de soluções para processos de tradução, transcrição e legendagem, desde a digitalização até a revisão final e sua distribuição. Moro na cidade de Jacareí, onde frequento o curso de Análise de Sistemas do Instituto Federal de São Paulo.</p>
         <details>
           <summary>Ler mais</summary>
           <p>Venho da área de idiomas, onde comecei lecionando e traduzindo inglês. A experiência com ferramentas de tradução assistida foi onde consegui aplicar meus conhecimentos técnicos e transformá-los em soluções pela primeira vez.</p>
           <p>Em 2019 participei da fundação da NEWEN, uma pequena agência que atende várias demandas relacionadas a recursos multilíngues e serviços textuais.</p>
           <p>Manter nossa stack atualizada, obter conhecimento que agrega valor e dar suporte para que esse valor se multiplique é uma das minhas principais atribuições.</p>
           <p>Além disso, compartilho uma visão orientada a dados e estou sempre aprendendo sobre como aproveitar o estado da arte entre as APIs de voz-para-texto (STT) e tradução de máquina disponíveis no mercado.</p>
-          <p>Ao longo desses 4 anos trabalhamos em diferentes níveis, desde projetos individuais, grandes e pequenas marcas até parcerias com outras agências de tradução. Se o seu projeto precisa de internacionalização, seria um prazer conhecê-lo também.</p>
+          <p>Ao longo desses 6 anos trabalhamos em diferentes níveis, desde projetos individuais, grandes e pequenas marcas até parcerias com outras agências de tradução.</p>
         </details>
       </div>
 
       <h2>Experiência</h2>
       <ul class="lista">
-        <li class="item-espacado"><strong>2019 &mdash; presente</strong> NEWEN Linguagens & Tecnologia
+        <li class="item-espacado"><strong>desde 2019</strong> NEWEN Linguagens & Tecnologia
           <ul>
             <li><strong>Desenvolvedora e Tradutora</strong></li>
-            <li>Executo e implanto soluções para automação em processos de tradução, transcrição e legendagem</li>
+            <li>Desenvolvimento e implantação de soluções para processos de tradução, transcrição e legendagem</li>
+          </ul>
+        </li>
+                <li class="item-espacado"><strong>2024</strong> Coordenadoria de TI - IFSP Jacareí<br><em><small>Programa de estágio Campustech, duração fixa de 200 horas</small></em>
+          <ul>
+            <li><strong>Estagiária</strong></li>
+            <li>Desenvolvimento do sistema <a href="https://github.com/Estagio-IFSP/Estoque-CTI">Estoque-CTI</a> com Django e Postgres, implantação de sistemas em ambientes virtualizados Linux (XCP-ng), suporte e manutenção</li>
           </ul>
         </li>
         <li class="item-espacado"><strong>2014 &mdash; 2017</strong> Cultural Norte Americano
@@ -61,6 +67,7 @@
             <li><a href="https://jcr.ifsp.edu.br/index.php/ensino-superior/tecnologo-em-ads">
               Instituto Federal de São Paulo - Campus Jacareí</a></li>
             <li>Em andamento, 2022 &rightarrow; 2025</li>
+            <li>Índice de Rendimento Acadêmico: 9,02</li>
           </ul>
         </li>
       </ul>
@@ -78,13 +85,13 @@
 
       <h2>Projetos</h2>
       <ul class="lista">
-        <li><strong><a href="https://github.com/jultty/tdb">tdb</a></strong> &mdash; Implementação TypeScript das regras do boliche usando Desenvolvimento Dirigido a Testes (TDD)</li>
-        <li><strong><a href="https://github.com/jultty/pyransom">pyransom</a></strong> &mdash; Uma aplicação capaz de viajar recursivamente por diretórios e encriptá-los usando um algoritmo AES, com padding nos dados e testes automatizados</li>
-        <li><strong><a href="https://semtec.netlify.app/">semtec-api</a></strong> e <strong><a href="https://github.com/jultty/semtec-js">semtec-js</a></strong> &mdash; API e projeto de pesquisa sobre relações semânticas entre termos técnicos</li>
-        <li><strong><a href="https://semtec.netlify.app/extensao.html">semtec-ext</a></strong> &mdash; Consome os termos da semtec API e busca correspondências em uma página web</li>
-        <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Projetos de visualização de dados</li>
-        <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google</li>
-        <br/>
+        <li><strong><a href="https://github.com/jultty/mirante">mirante</a></strong> &mdash; Sistema educacional orientado a dados, com uma arquitetura centrada no banco de dados. Utiliza a linguagem procedural PL/pgSQL do PostgreSQL e acompanha uma interface web feita em JavaScript</li>
+        <li><strong><a href="https://github.com/jultty/tori">tori</a></strong> &mdash; Gerencia e replica configurações de sistemas Linux/Unix. Implementado usando scripts shell compatíveis com o padrão POSIX e testado em sistemas Linux e BSD</li>
+        <li><strong><a href="https://jultty.github.io/dataviz/">dataviz</a></strong> &mdash; Portfólio de análise e visualização de dados</li>
+        <li><strong><a href="https://github.com/jultty/limpeza-cadg">limpeza-cadg</a></strong> &mdash; Dados limpos para a versão em português do Certificado Profissional de Análise de Dados do Google com scripts em Python</li>
+        <li><strong><a href="https://github.com/Estagio-IFSP/Estoque-CTI">Estoque-CTI</a></strong> &mdash; Sistema de controle de estoque feito com Django, PostgreSQL e JavaScript. Desenvolvido como parte do programa de estágio da Coordenadoria de Tecnologia do IFSP Jacareí</li>
+        <li><strong><a href="https://github.com/jultty/blog">blog</a></strong> &mdash; Um blog pessoal responsivo, bilíngue, com suporte granular a feeds RSS e CSS adaptável aos esquemas de cores nativos do dispositivo</li>
+        <br>
         <li><em>Acesse meu <a href="https://github.com/jultty?tab=repositories">GitHub</a> para ver mais projetos</em></li>
       </ul>
 
